--- a/reg.html
+++ b/reg.html
@@ -43,11 +43,11 @@
         <form action="reg.html?" method="get" name="user">
             <div class="form-group">
                 <label for="firstName">Имя:</label>
-                <input type="text" class="form-control" id="firstName" name="firstName" required>
+                <input type="text" value="Мария" class="form-control" id="firstName" name="firstName" required>
             </div>
             <div class="form-group">
                 <label for="lastName">Фамилия:</label>
-                <input type="text" class="form-control" id="lastName" name="lastName" required>
+                <input type="text" value="Кузнецова" class="form-control" id="lastName" name="lastName" required>
             </div>
             <div class="form-group">
                 <label for="bookTitle">Название книги:</label>
@@ -58,17 +58,17 @@
             <div class="form-group">
                 <label>Пол:</label>
                 <div>
-                    <input type="radio" id="male" name="gender" value="male" required>
+                    <input type="radio" id="male" name="gender" value="male" checked>
                     <label for="male">Мужской</label>
                 </div>
                 <div>
-                    <input type="radio" id="female" name="gender" value="female" required>
+                    <input type="radio"  id="female" name="gender" value="female" required>
                     <label for="female">Женский</label>
                 </div>
             </div>
             <div class="form-group">
                 <label for="date">Дата:</label>
-                <input type="date" class="form-control" id="date" name="date" required>
+                <input type="date" value="2014-01-02" class="form-control" id="date" name="date">
             </div>
             <button type="submit" class="btn btn-primary">Отправить заявку</button>
         </form>
